<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ProfileActivity">

    <TextView
        android:id="@+id/pp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_pengembang"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textColor="#fff"
        android:layout_marginTop="20dp"
        android:fontFamily="cursive"
        tools:ignore="MissingConstraints" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_images"
        android:layout_width="161dp"
        android:layout_height="145dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/bg_cyan"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/profile_images">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="cursive"
                android:text="@string/augmented_reality_hewan"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="30sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/bg_menu"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:fontFamily="cursive"
            android:text="@string/nama_pengembang"
            android:textAlignment="center"
            android:textColor="#424242"
            android:textSize="35sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/muhamad_abdul_aziz"
            android:textAlignment="center"
            android:textSize="25sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:fontFamily="cursive"
            android:text="@string/email"
            android:textAlignment="center"
            android:textColor="#424242"
            android:textSize="35sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/aziz13_id_gmail_com"
            android:textAlignment="center"
            android:textSize="25sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>